@@ -1,3 +1,9 @@
+2008-09-28  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclBasic.c:      Fix the numLevels computations on
+	* generic/tclInt.h:        coroutine yield/resume
+	* tests/unsupported.test:
+
 2008-09-27  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclFileName.c (Tcl_GetBlock*FromStat): Made this work
